# Artifact-Infer

./: .gitmodules  README.md  main.py  pyproject.toml  test_import.py
bazaar/: nanovllm_base.py  nanovllm_hard.py  nanovllm_kvc.py  nanovllm_moe.py  nanovllm_v2_5.py
bazaar/demos/: test_distributed.py  test_nnmodule.py  test_orch_method.py  test_orch_state.py
docs/: sglang-pipeline-parallelism.md
docs/moe/: design.md  ep.md  memory.md  notes.md
eval/: test_aime_baseline.py  test_bazaar_moe.py  test_bazaar_v25.py  test_chunked.py  test_thp.py
patches/: flashinfer_v0.5.3.patch
src/core/: artifact.py  artifact_base.py  orchestrator.py  service.py
src/services/nanovllm-chunked/: .gitignore  LICENSE  README.md  bench.py  example.py  pyproject.toml  test_chunked.py
src/services/nanovllm_chunked/: config.py
src/services/nanovllm_v2_5/: config.py
workshop/e2e_bench/: COMM_VOLUME_AND_REPLICATION.md  KERNEL_BENCH_LOCAL_SETUP.md  README.md  REPORT.md  e2e_artifact.diff
workshop/e2e_bench/scripts/: autotune_helion_kernels.py  bench_nccl_bandwidth.py  benchmark_a2a_moe_overlap.py  benchmark_dense_ffn.py  (+24 more)
workshop/nanovllm_moe/: _test_cudagraph.py  _test_dispatch.py  _test_e2e_moe.py  _test_engine_dense.py  _test_engine_ep_ll.py  _test_engine_moe.py  _test_engine_tp_x_ep.py  _test_ep_a2a_cudagraph.py  _test_ep_ll_loader.py  _test_ep_ll_single_process.py  _test_fused_moe.py  _test_masked_grouped_gemm.py  _test_parity_hf.py  _test_parity_hf_triton.py  _test_torch_fused_moe.py  _test_triton_ep_ll_dispatch.py  _test_triton_masked_grouped_gemm.py  _test_triton_parity.py
(+130 files in other folders)
